# konkr_cpp

./: .gitignore  CMakeLists.txt  LICENSE.md  main.cc
.github/workflows/: ci.yml
assets/: atlas.json  entity_sprites.json
assets/levels/: README.md
assets/levels/tutorial/: troublemaker.level  unwelcome_guest.level
include/: GameTheme.hpp
levels/: README.md
rendering/: CMakeLists.txt  sprite_sheet.cc  sprite_sheet.h
src/: main.cc
src/game_logic/: CMakeLists.txt  game.cc  game.h  player.cc  player.h
src/rendering/: CMakeLists.txt  color_palette.h  graphics.cc  graphics.h  level.cc  level.h  level_renderer.cc  level_renderer.h  sprite_sheet.cc  sprite_sheet.h
src/ui/: CMakeLists.txt  user_interface.cc  user_interface.h
src/world/: CMakeLists.txt  bandit.cc  bandit.h  building.cc  building.h  castle.h  entity.cc  entity.h  human_unit.cc  human_unit.h  player.cc  player.h  tile.cc  tile.h  townhall.cc  townhall.h
